Remove code smells from model